Introduced an explicit InvalidPatternException